[package]
name = "udp_sas"
version = "0.1.4"
authors = ["Anthony Baire <ayba@free.fr>"]
description = "Source address selection for UDP sockets"
keywords = ["udp", "IP_PKTINFO", "IPV6_RECVPKTINFO"]
categories = ["network-programming", "os::unix-apis"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/a-ba/udp_sas"
readme = "README.md"

edition = "2018"
build = "build.rs"

[badges]
travis-ci = { repository = "a-ba/udp_sas", branch = "master" }

[build-dependencies]
cc = "1.0"


[dependencies]
libc  = "0.2"
os_socketaddr = "0.2.2"
tokio = { version = "1", features = ["net"], optional = true }
async-std = { version = "1.12", optional = true }
async-io = { version = "*", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
async_tokio = ["tokio"]
async_std = ["async-std", "async-io"]

[[example]]
name = "tokio_udp_server"
path = "examples/tokio_udp_server.rs"
required-features = ["async_tokio"]

[[example]]
name = "async_std_udp_server"
path = "examples/async_std_udp_server.rs"
required-features = ["async_std"]